updated the sign up page name

--- a/client/src/signup.html
+++ b/client/src/signup.html
@@ -2,7 +2,7 @@
 <body>
     <div class="App">
         <header class="App-header">
-            <h1>Login</h1>
+            <h1>Sign up</h1>
             <label for="student_name"><b>What's your name?</b></label>
             <input type="text" placeholder="Enter name" name="student_name" required>
             
